tests/errors/traceback_line_through_finally.ki
# A throw that crosses a `finally` must report the THROW's line (4) in the innermost traceback
# frame, matching the `error:` line — not the `try:` line (3). Regression for A04-1.
var io = import("io")
var f = Function():
    try:
        throw "BOOM"
    finally:
        io.print("cleanup")
f()
